src/app/ds-buttons/white-button/white-button.component.scss
@import '../../../sp-colors';

.wrapper {
	border: 1px solid $gray300;
	transition: background-color 0.2s ease;
	box-shadow: 0 2px 10px rgba(16, 20, 24, 0.1);
	border-radius: 8px;
	display: flex;
	cursor: pointer;
	justify-content: center;
	align-items: center;

	&.disabled {
		opacity: 0.5;
		cursor: default;
	}

	.icon {
		margin-right: 8px;
	}

	.title {
		color: $gray500;
		font-size: 14px;
	}

	.left-icon {
		margin-left: 6px;
	}
}

